--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,36 @@
-// pending functionality testing
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+.btn {
+    
+    color: #242424;
+    cursor: pointer;
+    border: none;
+    border-radius: 440px;
+    background-color: #34ec71;   
+}
+
+.btn:hover {
+    background-color: rgb(11, 203, 107);
+}
+
+.book__search--label {
+    display: flex;
+    font-weight: bold;
+    font-family: "Big Shoulders", sans-serif;
+
+}
+
+.book__title {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Big Shoulders";
+}
+
+.book__body {
+    font-size: 16px;
+    font-family: "Roboto Condensed";
+}
+
+.book__search--temp {
+    margin-bottom: 40px;
+}
