Updated styling on BTN

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .btn {
-    
+    font-family: "Big Shoulders";
     color: #242424;
     cursor: pointer;
     border: none;
@@ -11,6 +11,8 @@
 
 .btn:hover {
     background-color: rgb(11, 203, 107);
+    scale: 110%;
+    transition: all 400ms ease;
 }
 
 .book__search--label {
